force-app/main/default/objects/Collateral_Owner__c/Collateral_Owner__c.object-meta.xml
<CustomObject>
    <label>Collateral Owner</label>
    <pluralLabel>Collateral Owners</pluralLabel>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Collateral Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Junction object linking Collateral to Account (ownership relationship)</description>
</CustomObject>