force-app/main/default/objects/Collateral_Owner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collateral Ownership</relationshipLabel>
    <relationshipName>Collateral_Ownership</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <description>Account that owns this collateral</description>
</CustomField>